# CLEANR

./: .gitignore  .gitmodules  README.md  convert_hf_to_gguf.py  deduplicate.ipynb  description.md  description_ontug.md  docker-compose.yml  encode_datasets.ipynb  eval_grammar.gbnf  eval_grammar_ner.gbnf  evaluation.ipynb  generate_submissions.ipynb  generate_submissions_ontug.ipynb  grammar.gbnf  inference.ipynb  inference.py  inference_clean.ipynb  inference_clean.py  inference_ner.py  merge_finetunes.ipynb  merge_results.ipynb  missing_relations.txt  prepare_dataset.ipynb  prepare_dataset_chats.ipynb  pyproject.toml  quantize_all.py
configs/: hermes-3B-lora.yaml  llama-1B-lora.yaml  llama-3B-lora.yaml  llama-lora.yaml
constrerl/: _annotator_best.py  annotations_schema.py  annotator.py  db_schema.py  erl_schema.py  erl_schema_new.py  evaluate.py  ner.py
manage_models/: quantize_all.py
report/: task_6_2_2.tex  task_6_2_3.tex
report_old/: task_6_2_1.tex
slurm/: evaluate_hermes_3b.sh  evaluate_hermes_3b_lora.sh  evaluate_hermes_3b_lora_long.sh  evaluate_hermes_3b_ner.sh  evaluate_hermes_8b.sh  evaluate_openai.sh  evaluate_openai_big.sh  finetune_hermes_nvcluster_3B.sh  finetune_llama.sh  finetune_llama_1B.sh  finetune_llama_3B.sh
submission/: evaluation.ipynb  f1_at_k_rerun.tex  generate_submissions.ipynb  generate_submissions_ontug.ipynb  loss_plot.tex  loss_plot_long.tex  merge_results.ipynb  plot_learning.ipynb
submission/report/: task_6_1_1.tex  task_6_2_1.tex  task_6_2_2.tex  task_6_2_3.tex
submission/report_further/: task_6_1_1.tex  task_6_2_1.tex  task_6_2_2.tex  task_6_2_3.tex
submission/report_ontug/: task_6_1_1.tex  task_6_2_1.tex  task_6_2_2.tex  task_6_2_3.tex
