[project]
name = "gutbrainie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sigstore>=3.6.1",
    "transformers>=4.48.3",
    "llama-cpp-agent",
    "llama-cpp-python",
    "tqdm>=4.67.1",
    "ipykernel",
    "betterproto==2.0.0b6",
    "json-repair>=0.36.0",
    "langchain-huggingface>=0.1.2",
    "openai>=1.62.0",
    "langchain[openai]>=0.3.18",
    "datasets>=3.2.0",
    "torch>=2.6.0",
    "torchvision>=0.20.1",
    "torchao>=0.8.0",
    "torchaudio>=2.5.1",
    "torchtune>=0.5.0",
    # "triton-nightly",
    "peft>=0.14.0",
    "sqlalchemy>=2.0.38",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.5",
    "sentence-transformers>=3.4.1",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "ipython<9.0.0",
    "flagembedding>=1.3.4",
    "pystache>=0.6.8",
    "chevron>=0.14.0",
    "openpyxl>=3.1.5",
    "tikzplotlib-patched",
    "gguf>=0.16.3",
]

[tool.uv.sources]
llama-cpp-python = [
    { index = "llama-metal", marker = "platform_system == 'Darwin'" },
    { index = "llama-gpu", marker = "platform_system == 'Linux'" },
]
onnxruntime-gpu = [
    { index = "onnxruntime-gpu", marker = "platform_system == 'Linux'" },
]
llama-cpp-agent = [
    { git = "https://github.com/Dakantz/llama-cpp-agent.git", branch = "fix-gbnf-generation-trailing-bracket" },
]
tikzplotlib-patched = [{ git = "https://github.com/JasonGross/tikzplotlib" }]
triton-nightly = [{ index = "triton-nightly" }]

[[tool.uv.index]]
name = "llama-metal"
url = "https://abetlen.github.io/llama-cpp-python/whl/metal/"
explicit = true

[[tool.uv.index]]
name = "llama-gpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124/"
explicit = true

[[tool.uv.index]]
name = "triton-nightly"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/Triton-Nightly/pypi/simple/"
explicit = true

[tool.uv.workspace]
members = ["deepstruct"]
